force-app/main/default/objects/Insight_Reference_Master_Data__mdt/Insight_Reference_Master_Data__mdt.object-meta.xml
<CustomObject>
    <label>Insight Reference Master Data</label>
    <pluralLabel>Insight Reference Master Data</pluralLabel>
</CustomObject>