force-app/main/default/objects/Insight_Reference_Master_Data__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>