force-app/main/default/objects/Insight_Reference_Master_Data__mdt/fields/Field_Value_Id__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Id__c</fullName>
    <label>Field Value Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>