force-app/main/default/objects/Insight_Reference_Master_Data__mdt/fields/Field_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Text__c</fullName>
    <label>Field Value Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>